--- a/src/styles/blocks/aside.scss
+++ b/src/styles/blocks/aside.scss
@@ -10,6 +10,8 @@
   transition: all 0.3s;
   transform: translateX(-100%);
 
+  z-index: 3;
+
   &:target {
     opacity: 1;
     transform: translateX(0);
@@ -31,17 +33,6 @@
         height: 225px;
       }
     }
-
-    &--opasity {
-      height: calc(100vh - 400px);
-      background-color: rgba(0, 0, 0, 0.5);
-      opacity: 0.5;
-
-      @include onTablet {
-        height: calc(100vh - 225px);
-      }
-    }
-
   }
 
   &__content {
