--- a/src/styles/blocks/bottom-section.scss
+++ b/src/styles/blocks/bottom-section.scss
@@ -76,7 +76,7 @@
 
   &__form {
     display: flex;
-
+    
     &--input {
       padding: 18px 24px;
 
@@ -113,6 +113,7 @@
       height: 53px;
       width: 52px;
       background-color: #f14a27;
+      border: none;
       cursor: pointer;
 
       transition: 0.6s;
