--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,5 +1,6 @@
 .page {
   scroll-behavior: smooth;
+  position: relative;
 
   &__body {
     overflow-x: hidden;
@@ -9,5 +10,24 @@
 
   &--with-menu {
     overflow: hidden;
+  }
+
+  &__opasity {
+    display: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    height: 100%;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0.5;
+
+    z-index: 2;
+
+    &--activ {
+      display: block;
+    }
   }
 }
