add background for menu, fix a paddings, change form

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -183,6 +183,7 @@
   background-image: url(../images/icons/arrow-up.svg);
   background-position: 50% 50%;
   background-repeat: no-repeat;
+  @include hover(transform, scale(1.1));
 }
 
 .line {
