--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -57,6 +57,12 @@
       width: 100%;
     }
 
+    &:nth-child(2) {
+      @include onTablet {
+        margin-right: 100%;
+      }
+    }
+
     &--not-tablet {
       display: none;
 
