--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,16 +1,17 @@
 .header {
   &__content {
     @include pageGrid;
-    @include paddingInline;
-    padding-right: 0;
     position: relative;
 
     @include onTablet {
+      padding-left: 34px;
       padding-right: 0;
       margin-bottom: 88px;
     }
 
     @include onDesktop {
+      padding-left: 55px;
+      padding-right: 0;
       margin-bottom: 200px;
     }
   }
@@ -21,6 +22,7 @@
     left: 20px;
 
     @include onTablet {
+      top: 40px;
       left: 34px;
     }
 
