--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,9 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "utils/vars";
+@import "utils/reset";
+@import "utils/mixins";
 
-body {
-  background: $c-gray;
-}
+@import "blocks/page";
+@import "blocks/container";
+@import "blocks/header";
+@import "blocks/tickets";
+@import "blocks/events";
