--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,7 @@
-$c-gray: #eee;
+$main-color: #0f0e08;
+$secondary-color: #1a5a4c;
+
+$tablet-min-width: 640px;
+$desktop-min-width: 1280px;
+
+$transition-time: 0.3s;
