added section lecture and fixed picture

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,7 @@
 @import "../styles/blocks/schedule.scss";
 @import "../styles/blocks/section.scss";
 @import "../styles/blocks/events.scss";
+@import "../styles/blocks/lecture.scss";
 @import "../styles/blocks/gallery.scss";
 @import "../styles/blocks/subscription.scss";
 @import "../styles/blocks/form.scss";
