add task solution

--- a/src/styles/blocks/galery.scss
+++ b/src/styles/blocks/galery.scss
@@ -9,6 +9,16 @@
     color: #0f0e08;
     text-align: center;
     margin-bottom: 40px;
+
+    @include onDasktop {
+      text-align: left;
+      font-size: 48px;
+    }
+
+    @include onTablet {
+      text-align: left;
+      font-size: 48px;
+    }
   }
   &__show-min {
     @media (min-width: 900px) {
