--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -170,14 +170,16 @@
     height: 52px;
     background: #fff;
     text-decoration: none;
-    font-weight: 600;
-    font-size: 18px;
+    font-family: $plex-sasns;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 100%;
+    color: #0f0e08;
     letter-spacing: 0.05em;
     background-image: url("../images/greenerr.jpg");
     background-repeat: no-repeat;
     background-position: right;
     --c: #1a5a4c;
-    color: #0f0e08;
     text-transform: uppercase;
     z-index: 1;
     transition: 0.5s;
@@ -234,6 +236,11 @@
       line-height: 100%;
       color: #0f0e08;
       text-align: center;
+    }
+
+    &:focus {
+      outline-style: none;
+      outline-color: none;
     }
 
     @include onTablet {
