--- a/src/styles/blocks/relevant.scss
+++ b/src/styles/blocks/relevant.scss
@@ -36,7 +36,6 @@
     @include onTablet {
       padding: 37%;
       margin-bottom: 40px;
-      margin-right: 30px;
     }
 
     @include onDasktop {
@@ -57,14 +56,24 @@
     @include onDasktop {
       max-width: 370px;
     }
+
+    @include onTablet {
+      max-width: 460px;
+    }
   }
   &__content {
     display: flex;
     justify-content: space-between;
     margin-bottom: 15px;
+    align-items: center;
+
+    @include onDasktop {
+      max-width: 215px;
+    }
 
     @include onTablet {
       margin-bottom: 30px;
+      max-width: 215px;
     }
   }
   &__info-title {
@@ -73,12 +82,31 @@
     font-size: 16px;
     line-height: 100%;
     color: #687480;
+
+    @include onDasktop {
+      font-size: 14px;
+    }
+
+    @include onTablet {
+      font-size: 14px;
+    }
   }
   &__info-dates {
+    font-family: $plex-sasns;
     font-weight: 700;
     font-size: 16px;
-    line-height: 100%;
+    line-height: 24px;
     color: $green;
+
+    @include onDasktop {
+      font-size: 14px;
+      line-height: 21px;
+    }
+
+    @include onTablet {
+      font-size: 14px;
+      line-height: 21px;
+    }
   }
   &__text-title {
     font-family: $montserrat;
@@ -89,8 +117,14 @@
     margin-bottom: 11px;
     position: relative;
 
+    @include onDasktop {
+      margin-bottom: 15px;
+      font-size: 36px;
+    }
+
     @include onTablet {
       margin-bottom: 15px;
+      font-size: 36px;
     }
 
     &::after {
@@ -103,11 +137,23 @@
       top: 8px;
 
       @include onTablet {
-        left: 265px;
+        right: 10px;
       }
 
       @include onDasktop {
-        left: 265px;
+        right: 10px;
+      }
+    }
+  }
+
+  &__text-title_retreat {
+    &::after {
+      @include onTablet {
+        right: 58px;
+      }
+
+      @include onDasktop {
+        right: 58px;
       }
     }
   }
