--- a/src/styles/blocks/lecture.scss
+++ b/src/styles/blocks/lecture.scss
@@ -10,7 +10,7 @@
     margin-bottom: 183px;
 
     @media (min-width: 600px) and (max-width: 900px) {
-      margin: 0 20px;
+      margin: 0 20px 183px;
     }
 
     @include onDasktop {
@@ -25,7 +25,7 @@
     padding: 24px 0;
     text-align: center;
     bottom: -90px;
-    border-bottom: 2px solid grey;
+    border-bottom: 2px solid #c6d6d2;
     min-width: 280px;
     left: 50%;
     transform: translateX(-50%);
