commit with grid problem

--- a/src/styles/_blocks.scss
+++ b/src/styles/_blocks.scss
@@ -17,6 +17,7 @@
 @import "blocks/event";
 
 @import "blocks/gallery";
+@import "blocks/slideshow";
 @import "blocks/picture";
 @import "blocks/dots";
 
