--- a/src/styles/blocks/_CTA.scss
+++ b/src/styles/blocks/_CTA.scss
@@ -20,7 +20,7 @@
 
   &__schedule-contacts-container {
     @include pageGrid;
-    padding-top: 20px;
+    padding-top: 40px;
 
     @include onTablet {
       padding-top: 0;
@@ -45,7 +45,7 @@
   &__strip {
     height: 1px;
     width: 280px;
-    background: rgba(26, 90, 76);
+    background: $secondary-bg-color;
 
     @include onTablet {
       width: 460px;
