--- a/src/styles/blocks/_buy-btn.scss
+++ b/src/styles/blocks/_buy-btn.scss
@@ -6,9 +6,23 @@
   justify-content: space-between;
   align-items: center;
 
+  @include onTablet {
+    height: 70px;
+    width: 270px;
+  }
+
+  @include onDesktop {
+    align-self: flex-end;
+    margin-right: 50px;
+  }
+
   &__text {
     padding-left: 80px;
     font-family: $font-IBM;
+
+    @include onTablet {
+      padding-left: 68px;
+    }
   }
 
   &__buy-rectangle {
@@ -18,5 +32,10 @@
     background-color: $secondary-bg-color;
     justify-content: center;
     align-items: center;
+
+    @include onTablet {
+      width: 70px;
+      height: 70px;
+    }
   }
 }
