--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -9,13 +9,19 @@
     position: relative;
 
     @include onTablet {
+      padding-top: 88px;
       font-size: $font-size-tablet-decktop-h2;
       text-align: start;
+    }
+
+    @include onDesktop {
+      padding-top: 200px;
     }
   }
 
   &__pictures {
     padding-top: 40px;
+    // overflow: hidden;
 
     @include onTablet {
       display: grid;
@@ -24,8 +30,9 @@
     }
 
     @include onDesktop {
-      @include pageGrid;
-      row-gap: 30px;
+      // @include pageGrid;
+      // row-gap: 30px;
+      display: flex;
     }
   }
 }
