--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -10,6 +10,10 @@
   }
 }
 
+// @mixin onBigDescktop {
+//   @media (min-width: )
+// }
+
 @mixin pageGrid {
   --colums: 2;
   display: grid;
@@ -36,7 +40,7 @@
   @include onDesktop() {
     max-width: 1170px;
     margin-inline: auto;
-    padding-inline: 55px;
+    // padding-inline: 55px;
     padding: 0;
   }
 }
