--- a/src/styles/blocks/_current-events.scss
+++ b/src/styles/blocks/_current-events.scss
@@ -1,4 +1,5 @@
 .current-events {
+  // @include pageGrid;
 
   &__title {
     padding-top: 70px;
@@ -16,6 +17,12 @@
 
     @include onDesktop {
       padding-top: 200px;
+    }
+  }
+
+  &__content {
+    @include onTablet {
+      @include pageGrid;
     }
   }
 }
