--- a/src/styles/blocks/_picture.scss
+++ b/src/styles/blocks/_picture.scss
@@ -1,41 +1,41 @@
-.picture {
-  width: 100%;
-  height: 410px;
-  &--2,
-  &--3,
-  &--4,
-  &--5 {
-    display: none;
-  }
+// .picture {
+//   width: 100%;
+//   height: 410px;
+//   &--2,
+//   &--3,
+//   &--4,
+//   &--5 {
+//     display: none;
+//   }
 
-  @include onTablet {
-    height: 543px;
-    &--5 {
-      display: grid;
-    }
-  }
+//   @include onTablet {
+//     height: 543px;
+//     &--5 {
+//       display: grid;
+//     }
+//   }
 
-  @include onDesktop {
-    height: 100%;
-    &--1,
-    &--2,
-    &--3,
-    &--4 {
-      display: grid;
-    }
+//   @include onDesktop {
+//     height: 100%;
+//     &--1,
+//     &--2,
+//     &--3,
+//     &--4 {
+//       display: grid;
+//     }
 
-    &--1,
-    &--4 {
-      grid-column: span 4;
-    }
+//     &--1,
+//     &--4 {
+//       grid-column: span 4;
+//     }
 
-    &--2,
-    &--3 {
-      grid-column: span 8;
-    }
+//     &--2,
+//     &--3 {
+//       grid-column: span 8;
+//     }
 
-    &--5 {
-      display: none;
-    }
-  }
-}
+//     &--5 {
+//       display: none;
+//     }
+//   }
+// }
