--- a/src/styles/blocks/_subscription.scss
+++ b/src/styles/blocks/_subscription.scss
@@ -8,6 +8,17 @@
   background-repeat: no-repeat;
   width: 100%;
   height: 386px;
+  margin-top: 100px;
+
+  @include onTablet {
+    margin-top: 92px;
+    height: 380px;
+  }
+
+  @include onDesktop {
+    height: 550px;
+    margin-top: 200px;
+  }
 
   &__title {
     padding-top: 88px;
@@ -18,12 +29,17 @@
     line-height: 100%;
 
     @include onTablet {
+      padding-top: 82px;
       font-size: 48px;
+    }
+
+    @include onDesktop {
+      padding-top: 163px;
     }
   }
 
   &__advice {
-    padding: 20px 0 50px;
+    padding-top: 20px;
     text-align: center;
     font-family: $font-IBM;
     font-size: 18px;
@@ -31,7 +47,7 @@
     line-height: 150%;
 
     @include onTablet {
-      padding: 16px 0 64px;
+      padding-top: 16px;
       line-height: 100%;
     }
   }
@@ -41,7 +57,7 @@
     width: 280px;
     justify-content: space-between;
     align-items: center;
-    margin: 0 auto;
+    margin: 50px auto 0;
 
     @include onTablet {
       width: 460px;
