--- a/src/styles/blocks/_top-bar.scss
+++ b/src/styles/blocks/_top-bar.scss
@@ -1,4 +1,5 @@
 .top-bar {
+  grid-area: top;
   background-image: url(../images/header/header-mobile.png);
   background-size: cover;
   background-repeat: no-repeat;
@@ -7,32 +8,24 @@
 
   @include onTablet {
     height: 384px;
+    grid-column: 4/7;
   }
 
   @include onDesktop {
     height: 655px;
+    grid-column: 6/-1;
   }
 
   &__content {
-    // width: 100%;
+    width: 100%;
     @include onTablet {
-      width: 340px;
+      // width: 340px;
+      // grid-row: 4/6;
     }
 
     @include onDesktop {
-      width: 470px;
+      // width: 470px;
+      grid-column: 6/12;
     }
-
-  }
-
-  &__icons {
-    @include inlinePaddindControl;
-    display: flex;
-    align-items: center;
-    padding-top: 9px;
-  }
-
-  &__logo {
-    padding-left: 88px;
   }
 }
