--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,29 +1,55 @@
 .header {
+  position: relative;
 
   &__content {
-    // position: relative;
+    @include onTablet {
+      @include pageGrid;
+    }
+  }
+
+  &__icons {
+    width: 100%;
+    position: absolute;
+    @include inlinePaddindControl;
+    display: flex;
+    align-items: center;
+    padding-top: 9px;
 
     @include onTablet {
-      display: flex;
-      flex-direction: row-reverse;
-      // display: grid;
-      // grid-template-columns: repeat(2, 1fr);
-      gap: 20px;
+      @include pageGrid;
+    }
+  }
+
+  &__icon {
+    z-index: 2;
+    @include onTablet {
+      grid-column: span 1;
+    }
+
+    @include onDesktop {
+      grid-column: span 1;
+    }
+  }
+
+  &__logo-link {
+    padding-left: 88px;
+
+    @include onTablet {
+      grid-column: 4/-2;
+      // width: 220px;
+      // height: 72px;
+      padding-left: 0;
+      text-align: center;
+    }
+
+    @include onDesktop {
+      // width: 170px;
+      // padding-left: 476;
+      grid-column: 6/8;
     }
   }
 
   &__top-bar {
-    // background-image: url(../images/header/header-mobile.png);
-    // background-size: cover;
-    // background-repeat: no-repeat;
-    // // width: 100vw;
-    // height: 300px;
-
-  }
-
-  &__title {
-    font-size: $font-size-mobile-h1;
-    font-weight: $font-weight-bold;
-    line-height: 100%;
+    height: 300px;
   }
 }
