--- a/src/styles/blocks/_icon.scss
+++ b/src/styles/blocks/_icon.scss
@@ -8,31 +8,31 @@
   @include hover (transform, scale(1.2));
 
   &--menu {
-    background-image: url(../images/icons:logo/burger-menu.svg);
+    background-image: url(../images/icons-logo/burger-menu.svg);
   }
 
   &--close {
-    background-image: url(../images/icons:logo/close.svg);
+    background-image: url(../images/icons-logo/close.svg);
     background-size: 50%;
   }
 
   &--arrow {
-    background-image: url(../images/icons:logo/arrow.svg);
+    background-image: url(../images/icons-logo/arrow.svg);
   }
 
   &--facebook {
-    background-image: url(../images/icons:logo/facebook-logo.svg);
+    background-image: url(../images/icons-logo/facebook-logo.svg);
   }
 
   &--instagram {
-    background-image: url(../images/icons:logo/instagram-logo.svg);
+    background-image: url(../images/icons-logo/instagram-logo.svg);
   }
 
   &--arrow-black {
-    background-image: url(../images/icons:logo/arrow-black.svg);
+    background-image: url(../images/icons-logo/arrow-black.svg);
   }
 
   &--arrow-up {
-    background-image: url(../images/icons:logo/arrow-up.svg);
+    background-image: url(../images/icons-logo/arrow-up.svg);
   }
 }
