add task solution

--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -169,6 +169,9 @@
     margin-bottom: 25px;
   }
   &__menu-info {
+    font-weight: 400;
+    line-height: 21px;
+    size: 14px;
 
     @include onDasktop {
       max-width: 170px;
@@ -184,6 +187,17 @@
       grid-column: 3 / 6;
     }
   }
+
+  &__item-schedule {
+    font-weight: 400;
+    line-height: 21px;
+    size: 14px;
+  }
+
+  &__time--strong {
+    font-size: 15px;
+  }
+
   &__contact-info {
     font-family: $plex-sasns;
     font-weight: 400;
