--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,48 @@
 h1 {
-  @extend %h1;
+  @extend %Montserrat700;
+  font-size: 45px;
+  line-height: 100%;
+  text-align: center;
+  color: #000;
+
+  @include onTablet {
+    font-size: 54px;
+    line-height: 120%;
+    text-align: left;
+  }
+
+  @include onDesktop {
+    font-size: 72px;
+  }
+}
+
+h2 {
+  @extend %Montserrat700;
+  font-size: 36px;
+  line-height: 100%;
+  color: $dark-font-color;
+  text-align: center;
+
+  @include onTablet {
+    font-size: 48px;
+    text-align: left;
+  }
+}
+
+h3 {
+  @extend %Montserrat400;
+  font-size: 28px;
+  line-height: 100%;
+
+  @include onTablet {
+    font-size: 36px;
+  }
+}
+
+p {
+  display: block;
+  @extend %IBM-Plex300;
+  font-size: 16px;
+  line-height: 150%;
+  color: $midle-font-color;
 }
