--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,43 @@
-%h1 {
-  font-family: "Roboto", sans-serif;
+%Montserrat700 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+}
+
+%Montserrat400 {
+  font-family: "Montserrat", sans-serif;
   font-weight: 400;
+  color: $dark-font-color;
+}
+
+%IBM-Plex700 {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 700;
+  color: $accent-first-color;
+  line-height: 150%;
+}
+
+%IBM-Plex600 {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 600;
+}
+
+%IBM-Plex500 {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 500;
+  line-height: 100%;
+  color: $light-font-color;
+}
+
+%IBM-Plex400 {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 400;
+}
+
+%IBM-Plex300 {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 300;
+}
+
+%transition {
+  transition: all $effectDuration ease-in-out;
 }
