--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,13 @@
-$c-gray: #eee;
+$accent-first-color: #1a5a4c;
+$accent-second-color: #f14a27;
+$dark-font-color: #0f0e08;
+$midle-font-color: #4e4e4e;
+$light-font-color: #687480;
+
+$color-text-200: #334563;
+$dark-background-color: #2c2c2c;
+
+$effectDuration: 0.3s;
+
+$tablet-min-width: 640px;
+$desktop-min-width: 1280px;
