add first solution

--- a/src/styles/_blocks.scss
+++ b/src/styles/_blocks.scss
@@ -11,15 +11,12 @@
 @import "blocks/nav";
 @import "blocks/schedule";
 
-@import "blocks/main";
-
 @import "blocks/current-events";
 @import "blocks/event";
 
 @import "blocks/gallery";
 @import "blocks/slideshow";
-@import "blocks/picture";
-@import "blocks/dots";
+@import "blocks/slide";
 
 @import "blocks/subscription";
 
