--- a/src/styles/blocks/_CTA.scss
+++ b/src/styles/blocks/_CTA.scss
@@ -1,6 +1,12 @@
 .CTA {
   padding-top: 50px;
 
+  @include onDesktop {
+    display: flex;
+    padding-top: 47px;
+    gap: 65px;
+  }
+
   &__icons-and-logo {
     display: flex;
     justify-content: space-between;
@@ -19,11 +25,13 @@
   }
 
   &__schedule-contacts-container {
-    @include pageGrid;
     padding-top: 40px;
 
     @include onTablet {
+      display: flex;
+      justify-content: space-between;
       padding-top: 0;
+      gap: 31px;
     }
   }
 
@@ -51,21 +59,17 @@
       width: 460px;
     }
 
-  }
+    @include onDesktop {
+      width: 1px;
+      height: 260px;
+    }
 
-  &__nav {
-    padding-top: 40px;
-    font-family: $font-IBM;
-    font-size: $font-size-main-text-smaller;
-    font-weight: $font-weight-normal;
-    line-height: $line-hight-100;
   }
 
   &__top {
     @include onTablet {
-      display: grid;
-      grid-template-columns: (98px 220px 220px);
-      gap: 20px;
+      display: flex;
+      gap: 130px;
     }
   }
 
@@ -77,6 +81,13 @@
 
     @include onTablet {
       padding-top: 64px;
+    }
+
+    @include onDesktop {
+      padding-top: 0;
+      flex-direction: row;
+      align-items: flex-start;
+      gap: 69px;
     }
   }
 }
