--- a/src/styles/blocks/_bottom.scss
+++ b/src/styles/blocks/_bottom.scss
@@ -7,14 +7,16 @@
   align-content: center;
   position: relative;
   gap: 20px;
-  width: 100%;
+  width: fit-content;
   @include inlinePaddindControl;
 
   @include onTablet {
     grid-column: 1/4;
     align-items: flex-start;
     gap: 38px;
-    // margin-left: 34px;
+    width: 100%;
+    max-width: 470px;
+    margin-right: auto;
   }
 
   @include onDesktop {
@@ -47,15 +49,13 @@
   &__vertical-container {
     position: absolute;
     top: 522px;
-    left: 55px;
   }
 
   &__vertical {
     display: none;
     position: relative;
-    // text-orientation: upright;
-    // writing-mode: tb-rl;
     transform: rotate(270deg);
+    text-decoration: none;
     color: $accent-text-color;
     font-family: $font-IBM;
     font-size: $font-size-main-text-smaller;
