--- a/src/styles/blocks/_buy-btn.scss
+++ b/src/styles/blocks/_buy-btn.scss
@@ -1,6 +1,7 @@
 .buy-btn {
   width: 280px;
   height: 50px;
+  box-sizing: border-box;
   border: 1px solid $secondary-bg-color;
   display: flex;
   justify-content: space-between;
@@ -19,6 +20,9 @@
   &__text {
     padding-left: 80px;
     font-family: $font-IBM;
+    text-decoration: none;
+    color: $main-text-color;
+    width: 100%;
 
     @include onTablet {
       padding-left: 68px;
