--- a/src/styles/blocks/_contacts.scss
+++ b/src/styles/blocks/_contacts.scss
@@ -1,4 +1,6 @@
 .contacts {
+  font-family: $font-IBM;
+  font-weight: $font-weight-normal;
   font-size: 14px;
 
   &__title {
@@ -11,5 +13,18 @@
     &:first-child {
       padding-top: 20px;
     }
+  }
+
+  &--black {
+    @include onTablet {
+      width: 220px;
+    }
+  }
+
+  &__link {
+    text-decoration: none;
+    color: $main-text-color;
+
+    @include hover (color, $secondary-bg-color);
   }
 }
