--- a/src/styles/blocks/_event.scss
+++ b/src/styles/blocks/_event.scss
@@ -1,6 +1,5 @@
 .event {
   padding-top: 60px;
-  // @include pageGrid;
 
   @include onTablet {
     @include pageGrid;
@@ -113,18 +112,32 @@
   }
 
   &__subtitle-container {
+    box-sizing: border-box;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding-right: 5px;
     padding-top: 10px;
 
-    &--2 {
-      padding-right: 11px;
+    @include onTablet {
+      padding-right: 99px;
     }
 
     @include onDesktop {
       width: 370px;
+      padding-right: 9px;
+    }
+
+    &--2 {
+      padding-right: 40px;
+
+      @include onTablet {
+        padding-right: 145px;
+      }
+
+      @include onDesktop {
+        padding-right: 55px;
+      }
     }
   }
 
@@ -140,10 +153,6 @@
     &--position {
       text-align: center;
       padding-bottom: 50px;
-
-      @include onTablet {
-        // width: 460px;
-      }
     }
   }
 
@@ -151,6 +160,11 @@
     width: 10px;
     height: 10px;
     background-color: $accent-color;
+
+    @include onTablet {
+      width: 15px;
+      height: 15px;
+    }
   }
 
   &__paragraph {
