--- a/src/styles/blocks/_icon.scss
+++ b/src/styles/blocks/_icon.scss
@@ -30,6 +30,9 @@
 
   &--arrow-black {
     background-image: url(../images/icons-logo/arrow-black.svg);
+    border: none;
+    background-color: $accent-color;
+    padding: 0;
   }
 
   &--arrow-up {
