--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -6,6 +6,7 @@
   line-height: $line-hight-100;
   scroll-behavior: smooth;
   background-color: $c-gray;
+  transition: all $effect-duration;
 
   &:has(.page__menu:target) {
     overflow: hidden;
