--- a/src/styles/blocks/_schedule.scss
+++ b/src/styles/blocks/_schedule.scss
@@ -1,11 +1,38 @@
 .schedule {
-
+  font-family: $font-IBM;
   font-size: $font-size-main-text-smaller;
   line-height: $line-hight-150;
   font-weight: $font-weight-normal;
 
+  &--black {
+    @include onTablet {
+      width: 220px;
+    }
+  }
+
   &__title {
     line-height: 140.63%;
+  }
+
+  &__content {
+    @include onTablet {
+      display: flex;
+      gap: 38px;
+    }
+
+    @include onDesktop {
+      gap: 30px;
+    }
+  }
+
+  &__list {
+    @include onTablet {
+      width: 158px;
+    }
+
+    @include onDesktop {
+      width: 170px;
+    }
   }
 
   &__item {
@@ -30,9 +57,13 @@
   &__free-days {
     padding-top: 16px;
     font-weight: $font-weight-normal;
-  }
 
-  @include onTablet {
-    width: 220px;
+    @include onTablet {
+      width: 144px;
+    }
+
+    @include onDesktop {
+      width: 170px;
+    }
   }
 }
