--- a/src/styles/blocks/_subscription.scss
+++ b/src/styles/blocks/_subscription.scss
@@ -2,7 +2,7 @@
 
   color: $main-bg-color;
   position: relative;
-  background-image: url(../images/subscribe/subscribe.png);
+  background-image: url(../images/subscribe/subscribe-small.png);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -11,8 +11,10 @@
   margin-top: 100px;
 
   @include onTablet {
+    background-image: url(../images/subscribe/subscribe.png);
     margin-top: 92px;
     height: 380px;
+    background-size: contain;
   }
 
   @include onDesktop {
@@ -107,5 +109,9 @@
     @include onDesktop {
       left: 30px;
     }
+  }
+
+  &__icon {
+    cursor: pointer;
   }
 }
