--- a/src/styles/blocks/_current-events.scss
+++ b/src/styles/blocks/_current-events.scss
@@ -1,8 +1,7 @@
 .current-events {
-  // @include pageGrid;
 
   &__title {
-    padding-top: 70px;
+    margin-top: 70px;
     text-align: center;
     font-size: $font-size-tablet-decktop-h3;
     font-weight: $font-weight-bold;
@@ -10,13 +9,13 @@
     color: $main-text-color;
 
     @include onTablet {
-      padding-top: 88px;
+      margin-top: 88px;
       text-align: start;
       font-size: $font-size-tablet-decktop-h2;
     }
 
     @include onDesktop {
-      padding-top: 200px;
+      margin-top: 200px;
     }
   }
 
