--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -10,17 +10,18 @@
   pointer-events: none;
   overflow: auto;
   color: $main-bg-color;
-  // background-color: $secondary-bg-color;
   font-family: $font-IBM;
-
-  &__top-bar {
-    width: fit-content;
-  }
+  transition: $effect-duration;
 
   &:target {
     opacity: 1;
     pointer-events: all;
+    transition: $effect-duration;
     z-index: 2;
+  }
+
+  &__top-bar {
+    width: fit-content;
   }
 
   &__bg {
@@ -38,19 +39,22 @@
   }
 
   &__content {
-    // background-color: $secondary-bg-color;
     padding-top: 27px;
     display: flex;
-    height: 370px;
+    height: 372px;
     flex-direction: column;
     gap: 24px;
 
     @include onTablet {
-      height: 255px;
+      flex-direction: row;
+      gap: 38px;
+      height: 215px;
+      padding-top: 40px;
     }
 
     @include onDesktop {
-      height: 233px;
+      gap: 102px;
+      height: 193px;
     }
   }
 
@@ -58,15 +62,28 @@
     display: flex;
     align-items: flex-start;
     gap: 28px;
+
+    @include onTablet {
+      gap: 38px;
+    }
+
+    @include onDesktop {
+      gap: 102px;
+    }
   }
 
   &__strip {
     height: 1px;
     background-color: $main-bg-color;
+
+    @include onTablet {
+      width: 1px;
+      height: 145px;
+    }
   }
 
   &__bottom {
-    height: 100%;
+    height: 100vh;
     width: 100%;
     background-color: #18181a;
     opacity: 0.7;
