--- a/src/styles/blocks/_slideshow.scss
+++ b/src/styles/blocks/_slideshow.scss
@@ -34,12 +34,9 @@
 
     @include onDesktop {
       @include pageGrid;
-      // grid-template-areas:
-      // 'woman winter' 'park sea';
       column-gap: 30px;
       row-gap: 30px;
-      grid-template-columns: repeat(2, 1fr);
-      grid-template-rows: repeat(2, 1fr);
+      width: fit-content;
     }
   }
 
@@ -51,48 +48,54 @@
       height: 543px;
     }
 
+    @include onDesktop {
+      height: 600px;
+    }
+
     &--4 {
       display: none;
 
       @include onDesktop {
-        display: grid;
-        grid-area: park;
-        // grid-column: span 8;
+        display: block;
+        grid-column: 1/9;
+        height: 360px;
       }
     }
 
     @include onDesktop {
-      // @include pageGrid;
+      width: fit-content;
 
       &--2 {
         display: none;
       }
     }
 
-    // &--1 {
-    //   @include onDesktop {
-    //     grid-area: woman;
-    //     grid-column: span 4;
-    //   }
-    // }
+    &--1 {
+      @include onDesktop {
+        grid-column: 1/5;
+      }
+    }
 
-    // &--3 {
-    //   @include onDesktop {
-    //     grid-area: winter;
-    //     grid-column: span 8;
-    //   }
-    // }
+    &--3 {
+      @include onDesktop {
+        grid-column: 5/-1;
+      }
+    }
 
-    // &--5 {
-    //   @include onDesktop {
-    //     grid-area: sea;
-    //     grid-column: span 4;
-    //   }
-    // }
+    &--5 {
+      @include onDesktop {
+        grid-column: 9/-1;
+        height: 360px;
+      }
+    }
   }
 
   &__picture {
     height: 100%;
+
+    @include onDesktop {
+      object-fit: contain;
+    }
   }
 
   &__label {
@@ -135,38 +138,34 @@
       background-color: $secondary-bg-color;
     }
 
-    &--1:checked ~ #slideshow-inner > ul {
+    &--1:checked ~ .slideshow__inner > .slideshow__list {
       left: 0;
     }
 
-    &--2:checked ~ #slideshow-inner > ul {
+    &--2:checked ~ .slideshow__inner > .slideshow__list {
       left: -100%;
     }
 
-    &--3:checked ~ #slideshow-inner > ul {
+    &--3:checked ~ .slideshow__inner > .slideshow__list {
       left: -200%;
     }
 
-    &--5:checked ~ #slideshow-inner > ul {
+    &--5:checked ~ .slideshow__inner > .slideshow__list {
       left: -400% ;
     }
 
     @include onTablet {
-      &--2:checked ~ #slideshow-inner > ul {
+      &--2:checked ~ .slideshow__inner > .slideshow__list {
         left: -20%;
       }
 
-      &--3:checked ~ #slideshow-inner > ul {
-        left: -95%;
+      &--3:checked ~ .slideshow__inner > .slideshow__list {
+        left: -90%;
       }
 
-      &--5:checked ~ #slideshow-inner > ul {
+      &--5:checked ~ .slideshow__inner > .slideshow__list {
         left: -180%;
       }
     }
-  }
-
-  &__dots {
-    position: relative;
   }
 }
