--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -7,6 +7,11 @@
     }
   }
 
+  @include onDesktop {
+    max-width: $desktop-min-width;
+    margin-left: auto;
+  }
+
   &__icons {
     width: 100%;
     position: absolute;
@@ -17,6 +22,7 @@
 
     @include onTablet {
       @include pageGrid;
+      padding-top: 15px;
     }
   }
 
@@ -36,15 +42,11 @@
 
     @include onTablet {
       grid-column: 4/-2;
-      // width: 220px;
-      // height: 72px;
       padding-left: 0;
       text-align: center;
     }
 
     @include onDesktop {
-      // width: 170px;
-      // padding-left: 476;
       grid-column: 6/8;
     }
   }
