added hover effects on links, fixed gallery on mobile version, fixed subscribtion forms width

--- a/src/styles/blocks/_about.scss
+++ b/src/styles/blocks/_about.scss
@@ -6,16 +6,16 @@
   background-size: cover;
   text-align: center;
   color: $color-white;
-  padding-top: 88px;
+  padding: 88px 20px;
 
   @include onTablet {
     height: 380px;
-    padding-top: 82px;
+    padding: 82px 154px;
   }
 
   @include onDesktop {
     height: 550px;
-    padding-top: 82px;
+    padding: 163px 355px;
   }
 
   &__title-subscription {
