--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -47,7 +47,7 @@
   }
 
   &__contacts-item {
-    transition: transform 0.3s;
+    transition: transform $transition-duration-speed;
 
     &:hover {
       transform: scale(1.1);
