--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -76,6 +76,14 @@
     }
   }
 
+  &__item--display {
+    display: none;
+
+    @include onTablet {
+      display: grid;
+    }
+  }
+
   &__photo {
     position: absolute;
     width: 100%;
