--- a/src/styles/blocks/_icon.scss
+++ b/src/styles/blocks/_icon.scss
@@ -5,6 +5,11 @@
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
+  transition: all $transition-duration-speed;
+
+  &:hover {
+    transform: scale(1.1);
+  }
   
   &--menu {
     background-image: url(../images/menu-icon.svg);
