--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -61,6 +61,14 @@
       margin-bottom: 310px;
     }
   }
+
+  &__item {
+    transition: all $transition-duration-speed;
+
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
       
   &__link {
     color: $color-white;
@@ -68,8 +76,7 @@
     font-family: $font-Plex-500;
     font-size: 16px;
     line-height: 100%;
-    transition: $transition-duration-speed;
-  
+     
     @include onDesktop {
       &:hover {
         border-color: $color-white;
