Add dropping menu

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,7 +1,12 @@
 .header {
+  height: 300px;
   background-image: url(../images/header-bg.png);
   background-size: 100% 100%;
-  height: 300px;
+
+  font-family: Montserrat, sans-serif;
+  font-size: 30px;
+  font-weight: 700;
+  text-align: center;
 
   @include onTablet {
     background-position: 50vw 0;
@@ -34,10 +39,10 @@
     @include squareSize(24px);
     display: flex;
 
-    padding-top: 25px;
+    padding-top: $mobile-menu-paddings;
 
     @include onTablet {
-      padding-top: 40px;
+      padding-top: $tablet-menu-paddings;
     }
   }
 
@@ -64,11 +69,7 @@
   }
 
   &__logo {
-    font-family: Montserrat, sans-serif;
-    font-size: 30px;
-    font-weight: 700;
     line-height: 100%;
-    text-align: center;
     color: $main-color;
 
     @include onTablet {
@@ -79,11 +80,8 @@
   &__title {
     grid-column: 1 / -1;
 
-    font-family: Montserrat, sans-serif;
     font-size: 45px;
-    font-weight: 700;
     line-height: 100%;
-    text-align: center;
 
     @include onTablet {
       font-size: 54px;
