--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,3 +7,6 @@
 @import "blocks/header";
 @import "blocks/tickets";
 @import "blocks/events";
+@import "blocks/menu";
+@import "blocks/nav";
+@import "blocks/schedule";
