--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -4,4 +4,7 @@ $secondary-color: #1a5a4c;
 $tablet-min-width: 640px;
 $desktop-min-width: 1280px;
 
+$mobile-menu-paddings: 27px;
+$tablet-menu-paddings: 40px;
+
 $transition-time: 0.3s;
