1.fix background onDesktop in lecture-section. 2.add limited width. 3. add links to address, phone numbers, email.

--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -2,6 +2,7 @@
   margin: 0 auto;
   padding-inline: 20px;
   width: 100%;
+  max-width: 1280px;
 
   @include onTablet() {
     padding-inline: 34px;
