--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -69,6 +69,15 @@
     }
   }
 
+  &__link {
+    display: block;
+    text-decoration: none;
+    color: inherit;
+    @include hover(text-shadow, 1px 3px 5px $accent-second-color);
+    @include hover(color, $accent-second-color);
+    @include hover(transform, scale(1.05));
+  }
+
   &__button-home {
     justify-self: end;
     grid-row: 3 / 4;
