--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -26,15 +26,17 @@
     opacity: 0.5;
   }
 
-  &__content {
+  &__top {
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     width: 100%;
-    padding-bottom: 27px;
     background-color: $accent-first-color;
+  }
 
+  &__content {
+    padding-bottom: 27px;
     display: grid;
     grid-template-columns: auto auto;
     grid-template-rows: auto 1px auto;
