--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -4,9 +4,12 @@
   gap: 20px;
   padding-left: 20px;
 
+  @include onTablet {
+    padding-left: 34px;
+  }
+
   @include onDesktop {
     display: none;
-    padding-left: 34px;
   }
 
   &__slides {
