add second solution

--- a/src/styles/blocks/_contacts.scss
+++ b/src/styles/blocks/_contacts.scss
@@ -16,8 +16,11 @@
   }
 
   &--black {
+    max-width: 220px;
+    grid-column: span 1;
+
     @include onTablet {
-      width: 220px;
+      grid-column: span 2;
     }
   }
 
