--- a/src/styles/blocks/_nav.scss
+++ b/src/styles/blocks/_nav.scss
@@ -36,15 +36,12 @@
 
     @include onTablet {
       display: grid;
-      grid-template-columns: repeat(2, 220px);
-    }
-
-    @include onDesktop {
-      grid-template-columns: repeat(2, 169px);
+      grid-template-columns: repeat(2, 1fr);
     }
   }
 
   &__item {
+    max-width: 169px;
     @include onTablet {
       width: 100px;
     }
