--- a/src/styles/blocks/_schedule.scss
+++ b/src/styles/blocks/_schedule.scss
@@ -5,8 +5,14 @@
   font-weight: $font-weight-normal;
 
   &--black {
+    grid-column: span 1;
+
     @include onTablet {
-      width: 220px;
+      grid-column: span 2;
+    }
+
+    @include onTablet {
+      // grid-column: 4 / -1;
     }
   }
 
