--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -10,9 +10,11 @@
   }
 }
 
-// @mixin onBigDescktop {
-//   @media (min-width: )
-// }
+@mixin onBigDescktop {
+  @media (min-width: $desktop-max-width) {
+    margin-inline: auto;
+  }
+}
 
 @mixin pageGrid {
   --colums: 2;
