--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,6 +1,7 @@
 //width
-$tablet-min-width: 576px;
+$tablet-min-width: 700px;
 $desktop-min-width: 1170px;
+$desktop-max-width: 1280px;
 
 //colors
 $c-gray: #eee;
