--- a/src/styles/blocks/_CTA.scss
+++ b/src/styles/blocks/_CTA.scss
@@ -2,7 +2,7 @@
   padding-top: 50px;
 
   @include onDesktop {
-    display: flex;
+    @include pageGrid;
     padding-top: 47px;
     gap: 65px;
   }
@@ -22,20 +22,35 @@
     color: $main-title-color;
     display: flex;
     column-gap: 20px;
+
+    @include onTablet {
+      grid-column: span 1;
+    }
   }
 
   &__schedule-contacts-container {
     padding-top: 40px;
+    @include pageGrid;
 
     @include onTablet {
-      display: flex;
-      justify-content: space-between;
+      grid-column: 2/-2;
+      grid-template-columns: repeat(4, 1fr);
       padding-top: 0;
-      gap: 31px;
+      gap: 30px;
+    }
+
+    @include onDesktop {
+      grid-column: 3/-1;
     }
   }
 
+  &__go-top-container {
+    position: relative;
+    margin-top: 17px;
+  }
   &__go-top {
+    position: absolute;
+    right: 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -43,7 +58,6 @@
     height: 50px;
     border: 1px solid $secondary-bg-color;
     border-radius: 50%;
-    margin: 17px 0 0 230px;
 
     @include onTablet {
       display: none;
@@ -51,15 +65,18 @@
   }
 
   &__strip {
+    margin-top: 57px;
     height: 1px;
     width: 280px;
     background: $secondary-bg-color;
 
     @include onTablet {
+      margin-top: 0;
       width: 460px;
     }
 
     @include onDesktop {
+      grid-column: 7/8;
       width: 1px;
       height: 260px;
     }
@@ -68,8 +85,14 @@
 
   &__top {
     @include onTablet {
-      display: flex;
+      @include pageGrid;
       gap: 130px;
+    }
+
+    @include onDesktop {
+      grid-column: span 6;
+      grid-template-columns: repeat(6, 1fr);
+      gap: 30px;
     }
   }
 
@@ -84,6 +107,7 @@
     }
 
     @include onDesktop {
+      grid-column: 8/-1;
       padding-top: 0;
       flex-direction: row;
       align-items: flex-start;
