--- a/src/styles/blocks/_event.scss
+++ b/src/styles/blocks/_event.scss
@@ -2,12 +2,13 @@
   padding-top: 60px;
 
   @include onTablet {
-    @include pageGrid;
     grid-column: span 6;
     padding-top: 64px;
+    @include pageGrid;
   }
 
   @include onDesktop {
+    @include pageGrid;
     grid-column: span 12;
     padding-top: 104px;
   }
@@ -31,6 +32,15 @@
     }
   }
 
+  &__content {
+    @include onDesktop {
+      grid-column: 9 / -1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+  }
+
   &__img {
     width: 100%;
 
@@ -45,56 +55,60 @@
 
   &__exposition {
     position: relative;
-  }
 
-  &__on-img-container {
-    box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
-
-    @include onTablet {
-      width: 570px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      justify-self: center;
-      margin: 0 auto;
+    &--position {
+      @include onTablet {
+        @include pageGrid;
+      }
     }
   }
 
+  &__container-for-container {
+    grid-column: 2/-2;
+    @include onTablet {
+      @include pageGrid;
+    }
+  }
   &__date-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 50px;
+    margin-top: 20px;
     width: 280px;
     font-family: $font-IBM;
 
     @include onTablet {
-      height: 91px;
+      margin-top: 44px;
       width: 220px;
       font-size: $font-size-main-text-smaller;
     }
 
     @include onDesktop {
       height: auto;
-      padding-bottom: 32px;
+      margin-top: 0;
     }
 
     &--on-img {
       position: absolute;
       display: flex;
       justify-content: space-evenly;
-      top: -49%;
+      justify-self: center;
+      margin-top: 0;
       width: 100%;
+      bottom: 100%;
+      height: 50px;
       z-index: 1;
       background-color: $main-bg-color;
 
       @include onTablet {
-        top: -75%;
-        width: 570px;
+        grid-column: 2/-2;
+        margin-top: 0;
+        height: 91px;
       }
 
       @include onDesktop {
         padding: 45px 0 23px;
+        grid-column: 4/-4;
       }
     }
   }
@@ -117,10 +131,11 @@
     justify-content: space-between;
     align-items: center;
     padding-right: 5px;
-    padding-top: 10px;
+    margin-top: 15px;
 
     @include onTablet {
       padding-right: 99px;
+      margin-top: 32px;
     }
 
     @include onDesktop {
@@ -151,8 +166,18 @@
     }
 
     &--position {
+      padding-bottom: 20px;
       text-align: center;
-      padding-bottom: 50px;
+      box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
+
+      @include onTablet {
+        padding-bottom: 50px;
+        grid-column: 2/-2;
+      }
+
+      @include onDesktop {
+        grid-column: 4/-4;
+      }
     }
   }
 
