--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -47,6 +47,7 @@
 
     @include onTablet {
       flex-direction: row;
+      justify-content: space-around;
       gap: 38px;
       height: 215px;
       padding-top: 40px;
@@ -64,6 +65,7 @@
     gap: 28px;
 
     @include onTablet {
+      // grid-column: span 3;
       gap: 38px;
     }
 
@@ -73,6 +75,7 @@
   }
 
   &__strip {
+    // position: absolute;
     height: 1px;
     background-color: $main-bg-color;
 
