--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -7,6 +7,8 @@
   scroll-behavior: smooth;
   background-color: $c-gray;
   transition: all $effect-duration;
+  @include onBigDescktop;
+  max-width: $desktop-max-width;
 
   &:has(.page__menu:target) {
     overflow: hidden;
