--- a/src/styles/blocks/_subscription.scss
+++ b/src/styles/blocks/_subscription.scss
@@ -78,6 +78,7 @@
     outline: none;
     background-color: $main-bg-color;
     padding-left: 24px;
+    box-sizing: border-box;
 
     @include onTablet {
       width: 374px;
