--- a/src/styles/blocks/_event.scss
+++ b/src/styles/blocks/_event.scss
@@ -43,6 +43,7 @@
 
   &__img {
     width: 100%;
+    @include hover (transform, scale(1.05));
 
     @include onTablet {
       grid-column: span 6;
@@ -50,6 +51,10 @@
 
     @include onDesktop {
       grid-column: span 7;
+    }
+
+    &--3 {
+      @include hover (transform, scale(1));
     }
   }
 
