add second solution + bottom nav position

--- a/src/styles/blocks/_nav.scss
+++ b/src/styles/blocks/_nav.scss
@@ -27,10 +27,13 @@
 
       @include onTablet {
         padding-top: 64px;
+        column-gap: 150px;
       }
 
       @include onDesktop {
+        column-gap: 30px;
         padding: 0;
+
       }
     }
 
