--- a/src/styles/blocks/_CTA.scss
+++ b/src/styles/blocks/_CTA.scss
@@ -72,6 +72,7 @@
 
     @include onTablet {
       margin-top: 0;
+      // grid-column: 2/6;
       width: 460px;
     }
 
@@ -80,7 +81,10 @@
       width: 1px;
       height: 260px;
     }
+  }
 
+  &__nav {
+    // grid-column: 2/6;
   }
 
   &__top {
@@ -104,6 +108,7 @@
 
     @include onTablet {
       padding-top: 64px;
+      // @include pageGrid;
     }
 
     @include onDesktop {
