add second solution + hid menu overflow

--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -18,6 +18,7 @@
     pointer-events: all;
     transition: $effect-duration;
     z-index: 2;
+    overflow: hidden;
   }
 
   &__top-bar {
@@ -87,6 +88,7 @@
 
   &__bottom {
     height: 100vh;
+    // height: calc(100vh - 399px);
     width: 100%;
     background-color: #18181a;
     opacity: 0.7;
