--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,14 @@
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "blocks/page.scss";
+@import "blocks/header.scss";
+@import "blocks/container.scss";
+@import "blocks/grid.scss";
+@import "blocks/icon.scss";
+@import "blocks/nav.scss";
+@import "blocks/schedule.scss";
+@import "blocks/events.scss";
+@import "blocks/gallery.scss";
+@import "blocks/contacts.scss";
+@import "blocks/footer.scss";
