Made namu website for desktop

--- a/src/styles/blocks/schedule.scss
+++ b/src/styles/blocks/schedule.scss
@@ -6,7 +6,7 @@
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
-    line-height: 140.625%;
+    line-height: 140.63%;
     margin-bottom: 20px;
 
     &--footer {
@@ -19,10 +19,6 @@
     justify-content: center;
     align-items: start;
     gap: 30px;
-
-    // &--header {
-      // width: 400px;
-    // }
 
     &--footer {
       flex-direction: column;
@@ -40,7 +36,7 @@
   }
 
   &__work-day {
-    color: #FFF;
+    color: #fff;
     font-family: IBM Plex Sans, sans-serif;
     font-size: 14px;
     font-style: normal;
@@ -52,7 +48,7 @@
     }
 
     &-text {
-      color: #FFF;
+      color: #fff;
       font-family: IBM Plex Sans, sans-serif;
       font-size: 14px;
       font-style: normal;
