--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -80,7 +80,7 @@
   }
 
   &__text {
-    color: #4E4E4E;
+    color: #4e4e4e;
     font-family: IBM Plex Sans, sans-serif;
     font-size: 16px;
     font-style: normal;
