--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -5,7 +5,6 @@
     top: -40px;
     right: 0;
     z-index: -1;
-    height: 655px;
     background-image: url(../images/Main-page-photo.jpg);
     background-position: 50%;
     background-size: cover;
@@ -19,6 +18,7 @@
     }
 
     @include onDesktop {
+      height: 655px;
       width: 56.5%;
     }
   }
@@ -85,7 +85,7 @@
 
     &:hover {
       transform: scale(101%);
-      box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+      box-shadow: rgba(0, 0, 0, 0.35) 0 5px 15px;
     }
 
     &-word {
@@ -109,7 +109,7 @@
       background-repeat: no-repeat;
 
       &--contacts {
-        background-color: #F14A27;
+        background-color: $c-red;
       }
     }
   }
