--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,19 @@
-$c-gray: #eee;
+$font-family-title700: "montserrat700", "arial", sans-serif;
+$font-family-title400: "montserrat400", "arial", sans-serif;
+$font-family-text300: "ibmps300", arial, sans-serif;
+$font-family-text400: "ibmps300", arial, sans-serif;
+$font-family-text500: "ibmps300", arial, sans-serif;
+$font-family-text700: "ibmps300", arial, sans-serif;
+
+$color-dark: #0f0e08;
+$color-gray: #687480;
+$color-white: #fff;
+$color-text: #4e4e4e;
+$color-red: #f14a27;
+$color-lightgray: #e0e0e0;
+$color-link: #1a5a4c;
+
+$size-tablet: 640px;
+$size-desktop: 1280px;
+
+$transition: transform 0.5s ease;
